# sandboxed_app

./: .gitignore  CMakeLists.txt  README.md  build_and_run.sh  configure.sh  main.c  memeater.c  sandbox.c  sandbox.h  shell.nix  utils.c  utils.h
